--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <header class="main-header full main-layout">
     <section class="nav flex space-between align-center">
-      <div class="logo">Meme Generator</div>
+      <div class="logo">MemeGenerator</div>
       <div type="button" class="toggle-menu" onclick="toggleMenu()"></div>
       <nav class="main-nav clean-list">
         <ul class="main-menu clean-list flex">
@@ -29,8 +29,8 @@
 
     <main class="main-content-container grid">
       <div class="canvas-container">
-        <canvas id="my-canvas" width="400" height="400"
-          style="outline: 3px solid rgb(53, 0, 128); border-radius: 6px; margin: auto;"></canvas>
+        <canvas id="my-canvas" width="398" height="398"
+          style="border: 6px solid rgb(53, 0, 128); border-radius: 6px; margin: auto;"></canvas>
       </div>
 
       <section class="input-panel grid col-5 row-6">
