--- a/index.html
+++ b/index.html
@@ -45,15 +45,22 @@
         <button onclick="onClickedMoveLine('left')" class="btn-move-line-Left">˂</button>
         <button onclick="onClickedMoveLine('right')" class="btn-move-line-right">˃</button>
 
-        <select onchange="onChangedFont(this.value)" class="font" type="text" name="font" id="font" name="fonts"
-          id="fonts">
-          <option value="Impact">Impact</option>
-          <option value="Helvetica">Helvetica</option>
-          <option value="Ariel">Ariel</option>
-        </select>
+        <div class="font-container">
+          <select id="fonts" onchange="onChangedFont(this.value)" class="font" type="text" name="font" id="font"
+            name="fonts" id="fonts">
+            <option value="Impact">Impact</option>
+            <option value="Helvetica">Helvetica</option>
+            <option value="Ariel">Ariel</option>
+          </select>
+          <label for="fonts">Select Font</label>
 
-        <input oninput="onChangedFontSize()" class="font-size " type="number" name="font-size" id="font-size"
-          placeholder="font-size" class="font-size" value="22" />
+        </div>
+        <div class="font-size-container">
+          <label for="font-size">Font size</label>
+
+          <input id="font-size" oninput="onChangedFontSize()" class="font-size " type="number" name="font-size"
+            id="font-size" placeholder="font-size" class="font-size" value="22" />
+        </div>
         <button class="btn" onclick="onUploadImg()">Share</button>
         <button onclick="saveCanvas()">Save</button>
         <button onclick="clearCanvas(true)">Clear</button>
