General fixes and cleanup

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <main class="main-content-container grid">
       <div class="canvas-container">
         <canvas id="my-canvas" width="398" height="398"
-          style="border: 6px solid var(--wall-bg-color); border-radius: 6px; margin: auto;"></canvas>
+          style="border: 6px solid var(--color-grey-primary); border-radius: 6px; margin: auto;"></canvas>
       </div>
 
       <section class="input-panel grid col-5 row-6">
