--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Canvas</title>
+  <link rel="icon" type="image/x-icon" href="img/meme-imgs (square)/15.jpg">
   <link rel="stylesheet" href="styles/style.css" />
 
 </head>
@@ -33,7 +34,7 @@
     <main class="main-content-container grid">
       <div class="canvas-container">
         <canvas id="my-canvas" width="398" height="398"
-          style="border: 6px solid var(--color-grey-primary); border-radius: 6px; margin: auto;"></canvas>
+          style="border: 6px solid aliceblue; border-radius: 6px; margin: auto;"></canvas>
       </div>
 
       <section class="input-panel grid col-5 row-6">
