--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           style="border: 6px solid aliceblue; border-radius: 6px; margin: auto;"></canvas>
       </div>
 
-      <section class="input-panel grid col-5 row-6">
+      <section class="input-panel grid col-5 row-4">
         <input type="search" class="txt full " oninput="onChangedLineText()" type="text" name="txt" id="txt"
           placeholder="txt" class="txt" />
         <button onclick="onClickedAddLine()" class="btn-add-text">+</button>
@@ -56,7 +56,7 @@
             <option value="Helvetica">Helvetica</option>
             <option value="Ariel">Ariel</option>
           </select>
-          <label for="fonts">Font</label>
+          <label class="font-container-label" for="fonts">Font</label>
 
         </div>
         <div class="font-size-container">
