Slight UI improvments

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <option value="Helvetica">Helvetica</option>
             <option value="Ariel">Ariel</option>
           </select>
-          <label class="font-container-label" for="fonts">Font</label>
+          <label class="font-container-label" for="fonts">Select Font</label>
 
         </div>
         <div class="font-size-container">
