--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <div type="button" class="toggle-menu" onclick="toggleMenu()"></div>
       <nav class="main-nav clean-list">
         <ul class="main-menu clean-list flex">
-          <a href="#" onclick="showClickedPage('gallery')" class="link-memes">Gallery </a>
-          <a href="#" onclick="showClickedPage('about')" class="link-about">About </a>
+          <a href="#" onclick="onShowClickedPage('gallery')" class="link-memes">Gallery </a>
+          <a href="#" onclick="onShowClickedPage('about')" class="link-about">About </a>
         </ul>
       </nav>
     </section>
